--- a/string2_solution.ipynb
+++ b/string2_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c125640",
+   "id": "483eeecf",
    "metadata": {},
    "source": [
     "# Basic string exercises 2\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0cb4374",
+   "id": "b92f1d76",
    "metadata": {},
    "source": [
     "## Introduction"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d4bae12",
+   "id": "a1d7ab49",
    "metadata": {},
    "source": [
     "You might want to read the [Google course chapter on\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc58eae",
+   "id": "089af0d6",
    "metadata": {},
    "source": [
     "## verbing\n",
@@ -57,23 +57,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "150956a6",
-   "metadata": {},
+   "execution_count": 1,
+   "id": "04f77080",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.882606Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.881924Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.883975Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.884460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def verbing(s):\n",
     "    #- +++your code here+++\n",
-    "    if len(s) ... :\n",
-    "        # do something\n",
-    "    return ..."
+    "    if len(s) >= 3:\n",
+    "        if s[-3:] != 'ing':\n",
+    "            s = s + 'ing'\n",
+    "        else:\n",
+    "            s = s + 'ly'\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd80a867",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "32017c54",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.888383Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.887777Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.889600Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.890012Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run this cell to test your function\n",
@@ -84,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c950abde",
+   "id": "5a768705",
    "metadata": {},
    "source": [
     "## not_bad\n",
@@ -102,21 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd553d51",
-   "metadata": {},
+   "execution_count": 3,
+   "id": "df60dc7c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.895074Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.894363Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.896157Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.896572Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def not_bad(s):\n",
     "    #- +++your code here+++\n",
-    "    return ..."
+    "    n = s.find('not')\n",
+    "    b = s.find('bad')\n",
+    "    if n != -1 and b != -1 and b > n:\n",
+    "      s = s[:n] + 'good' + s[b+3:]\n",
+    "    return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "77345389",
-   "metadata": {},
+   "execution_count": 4,
+   "id": "a1add74b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.900489Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.899888Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.901724Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.902249Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run this cell to test your function\n",
@@ -128,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9ad7e8",
+   "id": "da7147f8",
    "metadata": {},
    "source": [
     "## front_back\n",
@@ -152,21 +187,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a85bcf7",
-   "metadata": {},
+   "execution_count": 5,
+   "id": "7521086b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.907169Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.906572Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.908484Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.908907Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def front_back(a, b):\n",
     "    #- +++your code here+++\n",
-    "    return ..."
+    "    # Figure out the middle position of each string.\n",
+    "    a_middle = len(a) // 2\n",
+    "    b_middle = len(b) // 2\n",
+    "    if len(a) % 2 == 1:  # add 1 if length is odd\n",
+    "        a_middle = a_middle + 1\n",
+    "    if len(b) % 2 == 1:\n",
+    "        b_middle = b_middle + 1\n",
+    "    return a[:a_middle] + b[:b_middle] + a[a_middle:] + b[b_middle:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b833843a",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "92973fc8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-03-27T00:37:48.913254Z",
+     "iopub.status.busy": "2022-03-27T00:37:48.912657Z",
+     "iopub.status.idle": "2022-03-27T00:37:48.914476Z",
+     "shell.execute_reply": "2022-03-27T00:37:48.914889Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run this cell to test your function\n",
@@ -177,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68f22bb0",
+   "id": "b56fcf19",
    "metadata": {},
    "source": [
     "## That's it!\n",
@@ -202,6 +258,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
